--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "finnhub": "^1.2.18",
     "helmet": "^7.1.0",
     "moment-timezone": "^0.5.45",
+    "nodemailer": "^6.9.15",
     "technicalindicators": "^3.1.0",
     "yahoo-finance2": "^2.11.3",
     "yahoo-stock-prices": "^1.1.0"
